[gd_scene load_steps=2 format=3 uid="uid://bplc1takkrh3p"]

[ext_resource type="Script" path="res://assets/dialog_container.gd" id="1_0755o"]

[node name="DialogContainer" type="VBoxContainer"]
offset_left = 116.0
offset_top = 49.0
offset_right = 1041.0
offset_bottom = 464.0
script = ExtResource("1_0755o")

[node name="QuestionLabel" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_vertical = 3
text = "A question?"

[node name="ChoicesContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.18

[node name="ChoiceButton1" type="Button" parent="ChoicesContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChoiceButton2" type="Button" parent="ChoicesContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChoiceButton3" type="Button" parent="ChoicesContainer"]
layout_mode = 2
size_flags_vertical = 3
